<?xml version="1.0" encoding="UTF-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" android:fillViewport="true" android:layout_height="fill_parent" android:layout_width="fill_parent" android:scrollbarStyle="outsideOverlay">


    -<RelativeLayout android:layout_height="wrap_content" android:layout_width="fill_parent" android:orientation="vertical">


    -<RelativeLayout android:layout_height="wrap_content" android:layout_width="fill_parent" android:background="@drawable/topbgimage" android:id="@id/toplayout">

    <TextView
        android:id="@+id/txt_information"
        style="@style/headText"
        android:layout_centerHorizontal="true"
        android:text="@string/information"
        android:typeface="serif" />

    <Button android:layout_height="55.0dip" android:layout_width="50.0dip" android:background="@drawable/back" android:id="@id/back" android:layout_alignParentLeft="true"/>

</RelativeLayout>

    <Button android:background="@drawable/button" android:id="@+id/btn_vaccineinfo" style="@style/ButtonText" android:text="@string/vaccine_info" android:layout_centerHorizontal="true" android:layout_below="@id/toplayout" android:layout_marginTop="10.0dip" android:layout_marginLeft="30.0dip" android:padding="5.0dip"/>

    <Button android:background="@drawable/button" android:id="@+id/btn_features" style="@style/ButtonText" android:text="@string/feature_app" android:layout_centerHorizontal="true" android:layout_below="@id/btn_vaccineinfo" android:layout_marginTop="10.0dip" android:layout_marginLeft="30.0dip" android:padding="5.0dip"/>

    <Button android:background="@drawable/button" android:id="@+id/btn_aboutus" style="@style/ButtonText" android:text="@string/about_us" android:layout_centerHorizontal="true" android:layout_below="@id/btn_features" android:layout_marginTop="10.0dip" android:layout_marginLeft="30.0dip" android:padding="5.0dip"/>

    <Button android:background="@drawable/button" android:id="@+id/btn_feadback" style="@style/ButtonText" android:text="@string/mail" android:layout_centerHorizontal="true" android:layout_below="@id/btn_aboutus" android:layout_marginTop="10.0dip" android:layout_marginLeft="30.0dip" android:padding="5.0dip"/>

    <Button android:background="@drawable/button" android:id="@+id/share" style="@style/ButtonText" android:text="@string/share" android:layout_centerHorizontal="true" android:layout_below="@id/btn_feadback" android:layout_marginTop="10.0dip" android:layout_marginLeft="30.0dip" android:padding="5.0dip"/>

</RelativeLayout>

</ScrollView>