<?xml version="1.0" encoding="UTF-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" android:fillViewport="true" android:layout_height="fill_parent" android:layout_width="fill_parent" android:scrollbarStyle="outsideOverlay">


    <RelativeLayout android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/mainlayout" android:orientation="vertical">


    <RelativeLayout android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@id/toplayout" android:background="@drawable/topbgimage">

    <Button android:layout_height="55.0dip" android:layout_width="50.0dip" android:id="@+id/btn_back_features" android:background="@drawable/back" android:layout_alignParentLeft="true"/>

    <TextView android:id="@+id/txt_features_tital" style="@style/headText" android:layout_toRightOf="@id/btn_back_features" android:text="@string/app_name" android:paddingLeft="10.0dip"/>

</RelativeLayout>

    <TextView android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/txt_features_txt2" style="@style/text" android:text="@string/front" android:paddingLeft="10.0dip" android:layout_below="@id/toplayout" android:singleLine="false" android:paddingTop="30.0dip"/>

    <TextView android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/txt_features_txt3" style="@style/text" android:text="@string/front2" android:paddingLeft="10.0dip" android:layout_below="@id/txt_features_txt2" android:singleLine="false" android:paddingTop="30.0dip"/>

</RelativeLayout>

</ScrollView>