<?xml version="1.0" encoding="UTF-8"?>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android" android:fillViewport="true" android:layout_height="fill_parent" android:layout_width="fill_parent" android:background="@color/background" android:scrollbarStyle="outsideOverlay">


    -<RelativeLayout android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@id/add" android:orientation="vertical">


    -<RelativeLayout android:layout_height="wrap_content" android:layout_width="fill_parent" android:background="@drawable/topbgimage" android:id="@id/toplayout">

    <TextView android:layout_height="55.0dip" android:layout_width="wrap_content" android:id="@+id/txt_tital" style="@style/bodytext" android:layout_centerHorizontal="true" android:text="@string/evd" android:gravity="center"/>

    <Button android:layout_height="55.0dip" android:layout_width="50.0dip" android:background="@drawable/dbadd" android:id="@+id/btn_savegdate" android:layout_alignParentRight="true"/>

    <Button android:layout_height="55.0dip" android:layout_width="50.0dip" android:background="@drawable/back" android:id="@+id/btn_backgivendate" android:layout_alignParentLeft="true"/>

</RelativeLayout>


    -<TableLayout android:layout_height="wrap_content" android:layout_width="fill_parent" android:layout_below="@id/toplayout">


    -<TableRow>

    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@id/dob" style="@style/bodytext" android:text="@string/date" android:layout_margin="5.0dip"/>

    <EditText android:layout_height="wrap_content" android:layout_width="120.0dip" android:id="@+id/edit_vaccinedate" android:layout_margin="5.0dip" android:inputType="date" android:focusable="false"/>

    <Button android:layout_height="50.0dip" android:layout_width="40.0dip" android:background="@drawable/date" android:id="@+id/btn_Givendate" android:layout_margin="2.0dip"/>

</TableRow>


    -<TableRow>

    <View android:layout_height="4.0dip" android:layout_width="fill_parent" android:background="@color/greenborder" android:layout_span="4"/>

</TableRow>


    -<TableRow>

    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/txt_docname" style="@style/bodytext" android:text="@string/doctor" android:layout_margin="5.0dip"/>

    <EditText android:layout_height="wrap_content" android:layout_width="150.0dip" android:id="@+id/edit_docname" android:layout_margin="5.0dip" android:inputType="none" android:layout_span="2" android:textColor="#ff000000" android:enabled="true"/>

</TableRow>


    -<TableRow>

    <View android:layout_height="4.0dip" android:layout_width="fill_parent" android:background="@color/greenborder" android:layout_span="4"/>

</TableRow>


    -<TableRow>

    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/note" style="@style/bodytext" android:text="@string/note" android:layout_margin="5.0dip"/>

</TableRow>


    -<TableRow>

    <EditText android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/edit_vnote" android:gravity="top" android:layout_margin="5.0dip" android:inputType="textMultiLine" android:layout_span="3" android:textColor="#ff000000" android:minLines="6" android:lines="8" android:maxLines="10" android:layout_marginRight="5.0dip" android:paddingRight="5.0dip"/>

</TableRow>

</TableLayout>

</RelativeLayout>

</ScrollView>